<resources>
    <string name="app_name">Notepad Kotlin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title">My Character</string>
    <string name="last_updated">Last updated: %1$s</string>

    <!--  Strings for helper text  -->
    <string name="placeholder_char_name">Character Name</string>
    <string name="placeholder_char_class">Class</string>
    <string name="placeholder_char_level">Level</string>
    <string name="placeholder_char_race">Race</string>
    <string name="placeholder_char_attributes">Attributes</string>
    <!--  Attributes labels  -->
    <string name="placeholder_strength">Strength</string>
    <string name="placeholder_dexterity">Dexterity</string>
    <string name="placeholder_constitution">Constitution</string>
    <string name="placeholder_intelligence">Intelligence</string>
    <string name="placeholder_wisdom">Wisdom</string>
    <string name="placeholder_charisma">Charisma</string>
    <string name="changed_character">Your character has successfully been updated</string>
    <string name="undo">undo</string>
    <string name="stat_error">A character\'s stats cannot be above 20 or below 1</string>

</resources>