<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madproject.ui.CharacterFragment">

    <TextView
        android:id="@+id/_intelligence"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/_wisdom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />

    <TextView
        android:id="@+id/int_mod"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:text="+0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wis_mod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_intelligence"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:text="@string/placeholder_intelligence"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/_intelligence"
        app:layout_constraintEnd_toStartOf="@+id/textView56"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/_wisdom"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/_charisma"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_intelligence"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:text="@string/placeholder_wisdom"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/_wisdom"
        app:layout_constraintEnd_toStartOf="@+id/textView54"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView59" />

    <TextView
        android:id="@+id/wis_mod"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:text="+0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cha_mod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/int_mod"
        app:layout_constraintTop_toBottomOf="@+id/_wisdom"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/con_mod"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="42dp"
        android:text="+0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dex_mod"
        app:layout_constraintTop_toBottomOf="@+id/_constitution"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_charisma"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_wisdom"
        app:layout_constraintTop_toBottomOf="@+id/con_mod" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:text="@string/placeholder_charisma"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/_charisma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView56" />

    <TextView
        android:id="@+id/cha_mod"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:text="+0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wis_mod"
        app:layout_constraintTop_toBottomOf="@+id/_charisma"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_constitution"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_dexterity"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:text="@string/placeholder_constitution"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/_constitution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/_dexterity"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/_constitution"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_strength"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="40dp"
        android:text="@string/placeholder_dexterity"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/_dexterity"
        app:layout_constraintEnd_toStartOf="@+id/textView34"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastUpdated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/last_updated"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/_class"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/placeholder_char_class"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/placeholder_char_level"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/race"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/_class" />

    <TextView
        android:id="@+id/race"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/placeholder_char_race"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/level" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="147dp"
        android:padding="8dp"
        android:text="@string/placeholder_char_attributes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="43dp"
        android:text="@string/placeholder_strength"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/_strength"
        app:layout_constraintEnd_toStartOf="@+id/textView31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/str_mod"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:text="+0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dex_mod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_strength"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dex_mod"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="43dp"
        android:text="+0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/con_mod"
        app:layout_constraintStart_toEndOf="@+id/str_mod"
        app:layout_constraintTop_toBottomOf="@+id/_dexterity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_strength"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/_dexterity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

</androidx.constraintlayout.widget.ConstraintLayout>